2008-05-05  Lillian Angel  <langel@redhat.com>

	* jconsole.desktop: Fixed typo.

2008-05-04  Mark Wielaard  <mark@klomp.org>

	* overlays/openjdk/jdk/src/share/classes/com/sun/media/sound:
	Import new Gervill CVS. See CHANGES.txt. Changed:
	AudioFloatConverter.java, DLSSoundbank.java, SoftChannel.java,
	WaveFloatFileReader.java. Added: AudioFloatFormatConverter.java,
	WaveExtensibleFileReader.java, WaveFloatFileWriter.java. Deleted:
	PATInstrument.java, PATSample.java, PATSoundbankReader.java.

2008-05-04  Mark Wielaard  <mark@klomp.org>

	* Makefile.am (EXTRA_DIST): Add patches/icedtea-hat-spl-gpl.patch.
	* Makefile.in: Regenerate.
	* patches/icedtea-hat-spl-gpl.patch: New patch.

2008-05-04  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* Makefile.am (EXTRA_DIST): Add patches/icedtea-netx-plugin.patch.
	* Makefile.in: Regenerate.

2008-05-04  Mark Wielaard  <mwielaard@redhat.com>

	* Makefile.am (ICEDTEA_PATCHES): Add
	patches/icedtea-directaudio-close-trick.patch.
	* Makefile.in: Regenerated.
	* patches/icedtea-directaudio-close-trick.patch: New patch.

2008-05-01  Mark Wielaard  <mwielaard@redhat.com>

	* overlays/openjdk/jdk/src/share/classes/com/sun/media/sound/
	SoftChannel.java (controlChange): Reset least significant
	controller if necessary.

2008-05-01  Mark Wielaard  <mwielaard@redhat.com>

	* overlays/openjdk/jdk/src/share/classes/com/sun/media/sound/
	DLSSoundbankReader.java (getSoundbank(URL)): Don't throw IOException.
	(getSoundbank(File)): Allow soundbanks not ending in .dls.
	* overlays/openjdk/jdk/src/share/classes/com/sun/media/sound/
	PATSoundbankReader.java (getSoundbank(URL)): Don't throw IOException.
	* overlays/openjdk/jdk/src/share/classes/com/sun/media/sound/
	SF2SoundbankReader.java (getSoundbank(URL)): Likewise.
	(getSoundbank(File)): Allow soundbanks not ending in .sf2.
	* overlays/openjdk/jdk/src/share/classes/com/sun/media/sound/
	SoftSynthesizer.java (unloadAllInstruments): Check if Soundbank
	supported.